--- a/NAMESPACE
+++ b/NAMESPACE
@@ -124,6 +124,8 @@ export(projectServer)
 export(projectUI)
 export(project_classes)
 export(qtl2shinyApp)
+export(qtl2shinyServer)
+export(qtl2shinyUI)
 export(read_peaks)
 export(read_pheno)
 export(read_project)
