--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,10 +35,10 @@ export(geneRegionApp)
 export(geneRegionInput)
 export(geneRegionOutput)
 export(geneRegionServer)
-export(genoApp)
-export(genoInput)
-export(genoOutput)
-export(genoServer)
+export(genoPanelApp)
+export(genoPanelInput)
+export(genoPanelOutput)
+export(genoPanelServer)
 export(hapParApp)
 export(hapParInput)
 export(hapParOutput)
