--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,10 +35,14 @@ export(geneRegionApp)
 export(geneRegionInput)
 export(geneRegionOutput)
 export(geneRegionServer)
+export(genoApp)
+export(genoInput)
+export(genoOutput)
 export(genoPanelApp)
 export(genoPanelInput)
 export(genoPanelOutput)
 export(genoPanelServer)
+export(genoServer)
 export(hapParApp)
 export(hapParInput)
 export(hapParOutput)
