--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,12 +36,17 @@ export(geneRegionInput)
 export(geneRegionOutput)
 export(geneRegionServer)
 export(genoApp)
+export(genoEffectApp)
+export(genoEffectOutput)
+export(genoEffectServer)
+export(genoEffectUI)
 export(genoInput)
 export(genoOutput)
 export(genoPanelApp)
 export(genoPanelInput)
 export(genoPanelOutput)
 export(genoPanelServer)
+export(genoPanelUI)
 export(genoServer)
 export(hapParApp)
 export(hapParInput)
