--- a/NAMESPACE
+++ b/NAMESPACE
@@ -108,11 +108,11 @@ export(peakApp)
 export(peakOutput)
 export(peakServer)
 export(phenoApp)
+export(phenoInput)
 export(phenoNamesApp)
 export(phenoNamesInput)
 export(phenoNamesOutput)
 export(phenoNamesServer)
-export(phenoNamesUI)
 export(phenoOutput)
 export(phenoPanelApp)
 export(phenoPanelInput)
