--- a/NAMESPACE
+++ b/NAMESPACE
@@ -105,10 +105,13 @@ export(patternPlotServer)
 export(patternServer)
 export(patternUI)
 export(peakApp)
+export(peakFilterApp)
+export(peakFilterInput)
+export(peakFilterOutput)
+export(peakFilterServer)
 export(peakOutput)
 export(peakServer)
 export(phenoApp)
-export(phenoInput)
 export(phenoNamesApp)
 export(phenoNamesInput)
 export(phenoNamesOutput)
@@ -119,11 +122,11 @@ export(phenoPanelInput)
 export(phenoPanelOutput)
 export(phenoPanelServer)
 export(phenoPlotApp)
+export(phenoPlotInput)
 export(phenoPlotOutput)
 export(phenoPlotServer)
 export(phenoPlotUI)
 export(phenoServer)
-export(phenoUI)
 export(pheno_region)
 export(probsApp)
 export(probsServer)
