--- a/NAMESPACE
+++ b/NAMESPACE
@@ -69,8 +69,13 @@ export(hotspotPanelOutput)
 export(hotspotPanelServer)
 export(hotspotPanelUI)
 export(hotspotPartsApp)
+export(hotspotPlotApp)
+export(hotspotPlotOutput)
+export(hotspotPlotServer)
 export(hotspotServer)
-export(hotspotUI)
+export(hotspotTableApp)
+export(hotspotTableOutput)
+export(hotspotTableServer)
 export(kinshipApp)
 export(kinshipOutput)
 export(kinshipServer)
@@ -112,6 +117,10 @@ export(peakFilterServer)
 export(peakOutput)
 export(peakServer)
 export(phenoApp)
+export(phenoDataApp)
+export(phenoDataInput)
+export(phenoDataOutput)
+export(phenoDataServer)
 export(phenoNamesApp)
 export(phenoNamesInput)
 export(phenoNamesOutput)
@@ -121,12 +130,14 @@ export(phenoPanelApp)
 export(phenoPanelInput)
 export(phenoPanelOutput)
 export(phenoPanelServer)
+export(phenoPanelUI)
 export(phenoPlotApp)
-export(phenoPlotInput)
 export(phenoPlotOutput)
 export(phenoPlotServer)
-export(phenoPlotUI)
 export(phenoServer)
+export(phenoTableApp)
+export(phenoTableOutput)
+export(phenoTableServer)
 export(pheno_region)
 export(probsApp)
 export(probsServer)
