update module.md; change hotspot to hotspotData

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -59,19 +59,18 @@ export(haploServer)
 export(haploUI)
 export(hotspot)
 export(hotspotAccordionApp)
-export(hotspotApp)
-export(hotspotInput)
-export(hotspotOutput)
+export(hotspotDataApp)
+export(hotspotDataInput)
+export(hotspotDataOutput)
+export(hotspotDataServer)
 export(hotspotPanelApp)
 export(hotspotPanelInput)
 export(hotspotPanelOutput)
 export(hotspotPanelServer)
 export(hotspotPanelUI)
-export(hotspotPartsApp)
 export(hotspotPlotApp)
 export(hotspotPlotOutput)
 export(hotspotPlotServer)
-export(hotspotServer)
 export(hotspotTableApp)
 export(hotspotTableOutput)
 export(hotspotTableServer)
@@ -109,11 +108,11 @@ export(patternPlotServer)
 export(patternServer)
 export(patternUI)
 export(peakApp)
-export(peakFilterApp)
-export(peakFilterInput)
-export(peakFilterOutput)
-export(peakFilterServer)
 export(peakOutput)
+export(peakPanelApp)
+export(peakPanelInput)
+export(peakPanelOutput)
+export(peakPanelServer)
 export(peakServer)
 export(phenoApp)
 export(phenoDataApp)
