--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,21 +6,11 @@ S3method(summary,hotspot)
 export(comediator_region)
 export(comediator_type)
 export(create_peak_class)
-export(dashApp)
-export(dashInput)
-export(dashOutput)
-export(dashOutput2)
-export(dashServer)
-export(dashUI)
 export(dipParApp)
 export(dipParInput)
 export(dipParOutput)
 export(dipParServer)
 export(dipParUI)
-export(diploApp)
-export(diploOutput)
-export(diploServer)
-export(diploUI)
 export(downloadApp)
 export(downloadInput)
 export(downloadServer)
@@ -47,16 +37,6 @@ export(genoPanelOutput)
 export(genoPanelServer)
 export(genoPanelUI)
 export(genoServer)
-export(hapParApp)
-export(hapParInput)
-export(hapParOutput)
-export(hapParServer)
-export(hapParUI)
-export(haploApp)
-export(haploInput)
-export(haploOutput)
-export(haploServer)
-export(haploUI)
 export(hotspot)
 export(hotspotAccordionApp)
 export(hotspotDataApp)
@@ -107,14 +87,13 @@ export(patternPlotOutput)
 export(patternPlotServer)
 export(patternServer)
 export(patternUI)
-export(peakApp)
-export(peakOutput)
 export(peakPanelApp)
 export(peakPanelInput)
 export(peakPanelOutput)
 export(peakPanelServer)
-export(peakServer)
-export(phenoApp)
+export(peakReadApp)
+export(peakReadOutput)
+export(peakReadServer)
 export(phenoDataApp)
 export(phenoDataInput)
 export(phenoDataOutput)
@@ -123,7 +102,6 @@ export(phenoNamesApp)
 export(phenoNamesInput)
 export(phenoNamesOutput)
 export(phenoNamesServer)
-export(phenoOutput)
 export(phenoPanelApp)
 export(phenoPanelInput)
 export(phenoPanelOutput)
@@ -132,7 +110,9 @@ export(phenoPanelUI)
 export(phenoPlotApp)
 export(phenoPlotOutput)
 export(phenoPlotServer)
-export(phenoServer)
+export(phenoReadApp)
+export(phenoReadOutput)
+export(phenoReadServer)
 export(phenoTableApp)
 export(phenoTableOutput)
 export(phenoTableServer)
@@ -297,7 +277,6 @@ importFrom(shiny,selectizeInput)
 importFrom(shiny,setProgress)
 importFrom(shiny,shinyApp)
 importFrom(shiny,sidebarPanel)
-importFrom(shiny,singleton)
 importFrom(shiny,sliderInput)
 importFrom(shiny,strong)
 importFrom(shiny,tableOutput)
