--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,93 +25,92 @@ export(geneRegionInput)
 export(geneRegionOutput)
 export(geneRegionServer)
 export(genoApp)
+export(genoDataApp)
+export(genoDataInput)
+export(genoDataOutput)
+export(genoDataServer)
 export(genoEffectApp)
 export(genoEffectOutput)
 export(genoEffectServer)
 export(genoEffectUI)
 export(genoInput)
 export(genoOutput)
-export(genoPanelApp)
-export(genoPanelInput)
-export(genoPanelOutput)
-export(genoPanelServer)
-export(genoPanelUI)
 export(genoServer)
+export(genoUI)
 export(hotspot)
-export(hotspotAccordionApp)
+export(hotspotApp)
 export(hotspotDataApp)
 export(hotspotDataInput)
 export(hotspotDataOutput)
 export(hotspotDataServer)
-export(hotspotPanelApp)
-export(hotspotPanelInput)
-export(hotspotPanelOutput)
-export(hotspotPanelServer)
-export(hotspotPanelUI)
+export(hotspotInput)
+export(hotspotOutput)
 export(hotspotPlotApp)
 export(hotspotPlotOutput)
 export(hotspotPlotServer)
+export(hotspotServer)
 export(hotspotTableApp)
 export(hotspotTableOutput)
 export(hotspotTableServer)
+export(hotspotUI)
 export(kinshipApp)
 export(kinshipOutput)
 export(kinshipServer)
 export(mediateApp)
+export(mediateDataApp)
+export(mediateDataInput)
+export(mediateDataOutput)
+export(mediateDataServer)
+export(mediateDataUI)
 export(mediateInput)
 export(mediateOutput)
-export(mediatePanelApp)
-export(mediatePanelInput)
-export(mediatePanelOutput)
-export(mediatePanelServer)
 export(mediatePlotApp)
 export(mediatePlotInput)
 export(mediatePlotOutput)
 export(mediatePlotServer)
 export(mediateServer)
-export(mediateUI)
 export(pairProbsServer)
 export(patternApp)
+export(patternDataApp)
+export(patternDataInput)
+export(patternDataOutput)
+export(patternDataServer)
+export(patternDataUI)
 export(patternInput)
 export(patternOutput)
-export(patternPanelApp)
-export(patternPanelInput)
-export(patternPanelOutput)
-export(patternPanelServer)
 export(patternPlotApp)
 export(patternPlotOutput)
 export(patternPlotServer)
 export(patternServer)
-export(patternUI)
-export(peakPanelApp)
-export(peakPanelInput)
-export(peakPanelOutput)
-export(peakPanelServer)
+export(peakApp)
+export(peakInput)
+export(peakOutput)
 export(peakReadApp)
 export(peakReadOutput)
 export(peakReadServer)
+export(peakServer)
+export(phenoApp)
 export(phenoDataApp)
 export(phenoDataInput)
 export(phenoDataOutput)
 export(phenoDataServer)
+export(phenoInput)
 export(phenoNamesApp)
 export(phenoNamesInput)
 export(phenoNamesOutput)
 export(phenoNamesServer)
-export(phenoPanelApp)
-export(phenoPanelInput)
-export(phenoPanelOutput)
-export(phenoPanelServer)
-export(phenoPanelUI)
+export(phenoOutput)
 export(phenoPlotApp)
 export(phenoPlotOutput)
 export(phenoPlotServer)
 export(phenoReadApp)
 export(phenoReadOutput)
 export(phenoReadServer)
+export(phenoServer)
 export(phenoTableApp)
 export(phenoTableOutput)
 export(phenoTableServer)
+export(phenoUI)
 export(pheno_region)
 export(probsApp)
 export(probsServer)
@@ -128,12 +127,12 @@ export(read_pheno)
 export(read_project)
 export(scan1covar)
 export(scanApp)
+export(scanDataApp)
+export(scanDataInput)
+export(scanDataOutput)
+export(scanDataServer)
 export(scanInput)
 export(scanOutput)
-export(scanPanelApp)
-export(scanPanelInput)
-export(scanPanelOutput)
-export(scanPanelServer)
 export(scanServer)
 export(setParApp)
 export(setParInput)
@@ -171,8 +170,6 @@ export(winParOutput)
 export(winParServer)
 importFrom(DT,dataTableOutput)
 importFrom(DT,renderDataTable)
-importFrom(bslib,accordion)
-importFrom(bslib,accordion_panel)
 importFrom(bslib,card)
 importFrom(bslib,card_header)
 importFrom(bslib,layout_columns)
