--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,15 +1,15 @@
 Package: qtl2shiny
 Type: Package
 Title: Shiny interface for 'qtl2' Fine Mapping
-Version: 1.4.23
-Date: 2025-11-07
+Version: 1.4.24
+Date: 2025-11-12
 Authors@R: c(person("Brian S Yandell", "Author",
                 role = c("aut", "cre"),
                 email = "brian.yandell@wisc.edu"))
 Description: Shiny Interface for 'qtl2'.
 License: GPL-3
 Imports:
-    assertthat, dplyr, DT, fst, gdata, GGally, ggplot2, grDevices, grid,
+    assertthat, downr, dplyr, DT, fst, gdata, GGally, ggplot2, grDevices, grid,
     intermediate, plotly, purrr, qtl2, qtl2ggplot, qtl2mediate, qtl2pattern,
     rlang, RSQLite, shiny, stringr, tidyr, tools, utils
 Suggests:
