--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,7 +36,6 @@ export(genoEffectUI)
 export(genoInput)
 export(genoOutput)
 export(genoServer)
-export(genoUI)
 export(hotspot)
 export(hotspotApp)
 export(hotspotDataApp)
@@ -184,6 +183,8 @@ importFrom(bslib,page)
 importFrom(bslib,page_navbar)
 importFrom(bslib,page_sidebar)
 importFrom(bslib,sidebar)
+importFrom(downr,downloadInput)
+importFrom(downr,downloadServer)
 importFrom(dplyr,across)
 importFrom(dplyr,arrange)
 importFrom(dplyr,bind_cols)
