--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,6 +35,10 @@ export(genoEffectServer)
 export(genoEffectUI)
 export(genoInput)
 export(genoOutput)
+export(genoPlotApp)
+export(genoPlotInput)
+export(genoPlotOutput)
+export(genoPlotServer)
 export(genoServer)
 export(hotspot)
 export(hotspotApp)
