--- a/NAMESPACE
+++ b/NAMESPACE
@@ -122,6 +122,7 @@ export(projectOutput)
 export(projectServer)
 export(projectUI)
 export(project_classes)
+export(project_subject_model)
 export(qtl2shinyApp)
 export(qtl2shinyServer)
 export(qtl2shinyUI)
@@ -160,9 +161,9 @@ export(snpPlotApp)
 export(snpPlotOutput)
 export(snpPlotServer)
 export(snpProbsServer)
-export(snpSumApp)
-export(snpSumOutput)
-export(snpSumServer)
+export(snpTableApp)
+export(snpTableOutput)
+export(snpTableServer)
 export(triadApp)
 export(triadInput)
 export(triadOutput)
